Fixed the Overlapping Issue on UI.css on @ key-frames foil-buttons-effect
Fixed the Overlapping Issue on UI.css on @ key-frames foil-buttons-effect.

--- a/UI.css
+++ b/UI.css
@@ -24,14 +24,13 @@ body{
 @keyframes foil-buttons-effect{
     from{
     margin-top:100%;
-     margin-left:100%;
-     width:300%;
+     margin-left:50%;
 
 
     }
     
     to{
-     padding-bottom:auto;
+     auto;
     }
 }
 
